--- a/style.css
+++ b/style.css
@@ -1,9 +1,17 @@
-.generation-cell {
-	display:inline-block;
-	background:url('amoeba-bw.jpg') no-repeat;
-	min-height:60px;
-	min-width:64px;
+.ng-cloak {
+    display: none !important;
+}
+.cell_container {
+    display: inline-block;
+    width: 10%;
+    margin: 0;
+    padding: 0;
+}
+.generation_cell {
+	background: url('amoeba-bw.jpg') no-repeat;
+	min-height: 64px;
+	min-width: 64px;
 }
 .alive {
-	background-image:url('amoeba.gif');
+	background-image: url('amoeba.gif');
 }
